[gd_scene load_steps=17 format=2]

[ext_resource path="res://Resources/ui/Pixellari.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Resources/ui/2.png" type="Texture" id=2]
[ext_resource path="res://Resources/ui/Levels.png" type="Texture" id=3]
[ext_resource path="res://Resources/ui/Pressed 20.png" type="Texture" id=4]
[ext_resource path="res://Resources/ui/4.png" type="Texture" id=5]
[ext_resource path="res://Resources/ui/Pressed 29.png" type="Texture" id=6]
[ext_resource path="res://Resources/ui/Achievements.png" type="Texture" id=7]
[ext_resource path="res://Resources/ui/Pressed 23.png" type="Texture" id=8]
[ext_resource path="res://Resources/ui/Settings.png" type="Texture" id=9]
[ext_resource path="res://Resources/ui/Play.png" type="Texture" id=10]
[ext_resource path="res://User Interface/main_menu.gd" type="Script" id=11]
[ext_resource path="res://Resources/ui/Idle 20.png" type="Texture" id=12]
[ext_resource path="res://Resources/ui/Pressed.png" type="Texture" id=13]
[ext_resource path="res://Resources/ui/Pressed 9.png" type="Texture" id=14]
[ext_resource path="res://User Interface/4.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="4" parent="." instance=ExtResource( 15 )]
offset = Vector2( -790, -45 )
transform = Transform2D( 1, 0, 0, 1, -790, -45 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 236.0
margin_bottom = 124.0
custom_constants/separation = 23
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 236.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.937255, 0.65098, 0.0980392, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
text = "PLATFORMER 2D"
align = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 236.0
margin_bottom = 92.0
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 43.0
margin_right = 192.0
margin_bottom = 22.0
custom_constants/vseparation = 0
custom_constants/hseparation = 11
columns = 6

[node name="exit" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
visible = false
margin_right = 21.0
margin_bottom = 22.0
action_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="achivements" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
margin_right = 21.0
margin_bottom = 22.0
action_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 32.0
margin_right = 53.0
margin_bottom = 22.0
action_mode = 0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="world" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 64.0
margin_right = 85.0
margin_bottom = 22.0
action_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="setting" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 96.0
margin_right = 117.0
margin_bottom = 22.0
action_mode = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="others" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer/GridContainer"]
margin_left = 128.0
margin_right = 149.0
margin_bottom = 22.0
action_mode = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/GridContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/GridContainer/achivements" to="." method="_on_achivements_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/GridContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/GridContainer/world" to="." method="_on_world_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/GridContainer/setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/GridContainer/others" to="." method="_on_others_pressed"]
